--- a/.htaccess
+++ b/.htaccess
@@ -17,11 +17,11 @@ Options -Indexes
 # Deny from all
 </FilesMatch>
 
-#<IfModule mod_headers.c>
-#  <FilesMatch "\.(ttf|ttc|otf|eot|woff|woff2|font.css|css|js)$">
-#    Header set Access-Control-Allow-Origin "*"
-#  </FilesMatch>
-#</IfModule>
+<IfModule mod_headers.c>
+  <FilesMatch "\.(ttf|ttc|otf|eot|woff|woff2|font.css|css|js)$">
+    Header set Access-Control-Allow-Origin "*"
+  </FilesMatch>
+</IfModule>
 
 # SEO URL Settings
 RewriteEngine On
